--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=user
+
+spring.main.banner-mode=off
+logging.level.com.bridgelabz.fundoonote==DEBUG
+logging.level.org.springframework.web=ERROR
+logging.file=loginfo.log
+#logging.=ERROR
