--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=user
+spring.data.mongodb.database= users_DB
 
 spring.main.banner-mode=off
-logging.level.com.bridgelabz.fundoonote==DEBUG
+logging.level.com.bridgelabz.fundoonote=DEBUG
 logging.level.org.springframework.web=ERROR
+logging.level.com.bridgelabz.fundoonote.FundoonoteApplication=INFO
 logging.file=loginfo.log
 #logging.=ERROR
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=25
+spring.mail.username=sasi371996@gmail.com
+spring.mail.password=sasi@123
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
