--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,6 @@ logging.level.com.bridgelabz.fundoonote=DEBUG
 logging.level.org.springframework.web=ERROR
 logging.level.com.bridgelabz.fundoonote.FundoonoteApplication=INFO
 logging.file=loginfo.log
-#logging.=ERROR
-
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=25
@@ -18,3 +16,14 @@ spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+link=Activate your accout click on this link: http://localhost:8080
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
+
+jsa.rabbitmq.queue=jsa.queue
+jsa.rabbitmq.exchange=jsa.direct
+jsa.rabbitmq.routingkey=jsa.routingkey
